work has been done on get from coinmarketcap to take data and post sign up for write database

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   http: ^0.13.4
   audioplayers: ^0.20.1
   faker: ^2.0.0
+  font_awesome_flutter: ^10.3.0
+  getwidget: ^3.0.1
 
 dev_dependencies:
   flutter_test:
