--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,17 +27,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.4
-  audioplayers: ^0.20.1
+  http: ^0.13.3
+  # audioplayers: ^0.20.1
   faker: ^2.0.0
   font_awesome_flutter: ^10.3.0
   getwidget: ^3.0.1
-  rive: ^0.10.3
+  rive: ^0.11.3
+  shared_preferences: ^2.0.0
+  path_provider: ^2.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
