--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   rive: ^0.11.3
   shared_preferences: ^2.0.0
   path_provider: ^2.0.5
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
